# poetry-legacy-index

./: .gitignore  README.md  pyproject.toml
src/poetry_legacy_index/: main.py
