[tool.poetry]
name = "poetry-legacy-index"
version = "1.1.0"
description = ""
authors = ["Maz Jaleel <mazjaleel@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_legacy_index", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.4.1"

[tool.poetry.plugins."poetry.application.plugin"]
legacy-index-fix = "poetry_legacy_index.main:ExportApplicatioLegacyIndexFixPlugin"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
